# cognizantmlops

./: pyproject.toml
azureml_train_deploy.egg-info/: SOURCES.txt  requires.txt
gitenv/: pyvenv.cfg
outputs/: fraud_detection_model.pkl
src/azuremlapp/: .env
