[project]
name = "azureml-train-deploy"
version = "0.1.0"
description = "train and deploy a scikit learn mode; with azure machiine learning"
requires-python = ">=3.10"
dependencies = [
   "azure-ai-ml>=1.24,<2",
   "azure-identity>=1.19,<2",
   "joblib>=1.4,<2",
   "python-dotenv<=1.0,<2",
   "scikit-learn>=1.5,<2",
   "pandas",
   "uvicorn",
   
    
]

[project.optional-dependencies]
nlp = ["nltk>=3.9", "gensim>=4.3"]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
